# CSMVI16KOR

./: README.md  sh.exe.stackdump
CSMVI16KOR/: CMakeLists.txt  CSMVI16KOR.sln
CSMVI16KOR/CSMVI16KOR/: CMakeLists.txt  CSMVI16KOR.vcxproj  CSMVI16KOR.vcxproj.filters  Canny.cpp  Canny.h  ClassTest.cpp  ClassTest.h  EDistance.cpp  EDistance.h  FormMain.cpp  FormMain.h  FormMain.resx  LabelFolder.cpp  LabelFolder.h  ObjectPCA.cpp  ObjectPCA.h  Probability.cpp  Probability.h  SVMTest.cpp  SVMTest.h  TestFolder.cpp  TestFolder.h  TrainEDist.cpp  TrainEDist.h  TrainFolder.cpp  TrainFolder.h  TrainGMM.cpp  TrainGMM.h  TrainSVM.cpp  TrainSVM.h  Unlabelled.cpp  Unlabelled.h  freenect-playback-wrapper.cpp  freenect-playback-wrapper.h  resource.h
CSMVI16KOR/CSMVI16KOR/opencv2/: ml.hpp
CSMVI16KOR/CSMVI16KOR/opencv2/core/: affine.hpp  check.hpp
CSMVI16KOR/CSMVI16KOR/opencv2/dnn/: dnn.hpp  dnn.inl.hpp
